--- a/css/style.css
+++ b/css/style.css
@@ -9,33 +9,65 @@ body { background-color: #4A148C;
     background-attachment: fixed;
     font-family: "lato", "Helvetica Neue",Helvetica,Arial,sans-serif;}
 h1, h2, h3, h4, h5, h6 { margin-top: 0; }
-h1 { font-weight: bold; margin-bottom: 0px; }
-h2 { font-weight: bold; color: #888; font-size: 20px; }
-h3 { margin-bottom: 20px; }
+h1 { font-weight: bold; margin-bottom: 0px; font-family: "Arvo","lato", "Helvetica Neue",Helvetica,Arial,sans-serif; text-transform: uppercase; }
+h2 { font-weight: bold; color: #888; font-size: 20px; letter-spacing: 4px; text-transform: uppercase; font-size:16px; }
+h3 { font-weight: bold; margin-bottom: 20px;  font-family: "Arvo","lato", "Helvetica Neue",Helvetica,Arial,sans-serif; }
+h4 { margin-top: 20px; }
 label { margin-top: 5px; }
 textarea.form-control {
     height: 100px;
+}
+p {
+    line-height: 1.1em;
 }
 .initially-hidden {
     display: none;
 }
 .red { color: #f00; }
+
+
 .page {
     position: relative;
     border-radius: 3px;
     padding: 20px;
-    background-color: white;
+    background-color: #fff;
     min-height: 300px;
     width: 600px;
     float: right;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 30px;
+    margin-bottom: 40px;
 }
 .segment {
     width: 100%;
     border-top: 1px solid #ddd;
     padding-top: 20px;
     margin-top: 20px;
+}
+/* Navbar stuff */
+#navbar-container {
+    height: 30px;
+    width: 560px;
+    overflow: visible;
+    position: fixed;
+    transform: rotate(-90deg);
+}
+#navbar-container .navbar-item {
+    background-color: white;
+    display: inline-block;
+    position: relative;
+    top: -310px;
+    left: -40px;
+    padding: 4px 6px;
+    margin-right: 4px;
+    cursor: pointer;
+    transition: color 0.2s, background-color 0.2s;
+    border-radius: 3px;
+    color: #a1a1a1;
+}
+#navbar-container .navbar-item:hover,
+#navbar-container .navbar-item.active {
+    color: #000;
+    background-color: #ddd;
 }
 /* Following Header */
 #following-header {
@@ -120,6 +152,54 @@ textarea.form-control {
 }
 
 /* PORTFOLIO */
+.portfolio-object {
+    position: relative;
+    top: 30px;
+    opacity: 0;
+    margin-bottom: 30px;
+    transition-property: top, opacity;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
+    transition-delay: 0s;
+}
+.portfolio-object a {
+    text-decoration: none !important;
+    color: #333;
+}
+.portfolio-image {
+    width: 100%;
+    border: 3px solid #eee;
+    border-radius: 3px;
+    margin-bottom: 10px;
+}
+.portfolio-title {
+    font-size: 18px;
+    margin-bottom: 0px;
+    font-weight: bold;
+}
+.portfolio-object .portfolio-subtitle {
+    color: #888;
+    font-size: 14px;
+    font-weight: normal;
+    margin-top: 1px;
+    margin-bottom: 5px;
+}
+.portfolio-object.active {
+    top: 0px;
+    opacity: 1;
+}
+.portfolio-object.active:hover {
+    transition-duration: 0.2s;
+    transition-delay: 0s;
+    opacity: 0.6;
+}
+.portfolio-object:nth-child(1){transition-delay:0.00s;}
+.portfolio-object:nth-child(2){transition-delay:0.15s;}
+.portfolio-object:nth-child(3){transition-delay:0.30s;}
+.portfolio-object:nth-child(4){transition-delay:0.45s;}
+.portfolio-object:nth-child(5){transition-delay:0.60s;}
+.portfolio-object:nth-child(6){transition-delay:0.75s;}
+
 
 .text-sm-right {
     text-align: right;
@@ -127,7 +207,20 @@ textarea.form-control {
 .form-row {
     margin-top: 15px;
 }
+
+.footer {
+    width: 100%;
+    background-color: #222;
+    color: #ccc;
+    padding: 20px 0;
+}
 @media (max-width: 767px) {
+    #navbar-container {
+        display: none;
+    }
+    .portfolio-object {
+        transition-delay: 0s !important;
+    }
     #following-header {
         width: 100%;
     }
