--- a/css/style.css
+++ b/css/style.css
@@ -44,11 +44,14 @@ h2 {
 }
 h3 {
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
+    font-size: 36px;
+    text-align: center;
     font-family: "Arvo", "lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 h4 {
     margin-top: 20px;
+    font-weight: bold;
 }
 label {
     margin-top: 5px;
@@ -71,15 +74,18 @@ p {
     padding: 20px;
     background-color: #fff;
     min-height: 300px;
-    width: 600px;
     float: right;
     margin-top: 30px;
     margin-bottom: 40px;
+    width: 100%;
 }
 .segment {
     width: 100%;
+    max-width: 700px;
+    margin: 0 auto;
+    text-align: center;
     border-top: 1px solid #ddd;
-    padding-top: 20px;
+    padding: 70px 10px 60px;
     margin-top: 20px;
 }
 /* Navbar stuff */
@@ -97,28 +103,30 @@ p {
     position: relative;
     top: -310px;
     left: -40px;
-    padding: 4px 6px;
+    padding: 4px 6px 1px;
     margin-right: 4px;
     cursor: pointer;
     transition: color 0.2s, background-color 0.2s;
-    border-radius: 3px;
+    border-radius: 3px 3px 0 0;
     color: #a1a1a1;
+    background-color: #f8f8f8;
 }
 #navbar-container .navbar-item:hover,
 #navbar-container .navbar-item.active {
     color: #000;
-    background-color: #ddd;
+    background-color: #fff;
 }
 /* Following Header */
 
 #following-header {
     padding: 10px 0;
     width: 560px;
-    background: white;
-    -webkit-box-shadow: 0px 0px 10px 10px rgba(255, 255, 255, 1);
-    -moz-box-shadow: 0px 0px 10px 10px rgba(255, 255, 255, 1);
-    box-shadow: 0px 0px 10px 10px rgba(255, 255, 255, 1);
+    background: rgba(255, 255, 255, 0.7);
+    -webkit-box-shadow: 0px 0px 10px 10px rgba(255, 255, 255, 0.7);
+    -moz-box-shadow: 0px 0px 10px 10px rgba(255, 255, 255, 0.7);
+    box-shadow: 0px 0px 10px 10px rgba(255, 255, 255, 0.7);
     z-index: 1337;
+    text-shadow: 0 0 100px rgba(255, 255, 255, 1);
 }
 #following-header.active {
     position: fixed;
@@ -167,8 +175,10 @@ p {
 #experience-content .experience-more {
     position: relative;
     padding: 1px;
-    padding-left: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin-top: 20px;
+    margin-bottom: 80px;
 }
 #experience-content .experience-bar {
     content: "";
@@ -271,7 +281,7 @@ p {
         transition-delay: 0s !important;
     }
     #following-header {
-        width: 100%;
+        width: 85%;
     }
     .text-sm-right {
         text-align: left;
